# Critical-Zoomer

./: .aider.chat.history.md  .aider.input.history  .gitignore  Cargo.toml  DELIVERY_SPEC.md  Dockerfile.deploy  LICENSE  README.md  SPEC.md  TESTING_SPEC.md  TODO.txt  build.sh  rebuild.sh  tmp.txt
.github/: FUNDING.yml
benches/: my_bench.rs
docs/: SPEC.md  architecture.md  expectations.md  requirements.md
docs/designs/: headgroup.md  shadegroup.md  workgroup.md
docs/trash/: OLD.md  overflow.md
logs/: graph.dot
proptest-regressions/assemblies/: views.txt
proptest-regressions/assemblies/structs/: views.txt
proptest-regressions/assemblies/workgroup_new/: structs.txt
src/: arg.rs  constants.rs  do_work.rs  intexp.rs  lib.rs  main.rs  partial_knowledge.rs  range.rs  settings.rs  text.rs  utils.rs
src/act/: boot_trace.rs  color.rs  constants.rs  sampling.rs  settings.rs  utils.rs  viewport_shift.rs  widgetize.rs  workshift.rs
src/action/: collect.rs  color.rs  constants.rs  do_work.rs  handle_inputs.rs  highlight.rs  partial_knowledge.rs  rolling.rs  sampling.rs  serial_color.rs  serialize.rs  settings.rs  streaming.rs  utils.rs  widgetize.rs  workday.rs  workshift.rs
src/actor/: colorer.rs  computer.rs  dumb_worker.rs  escaper.rs  screen_worker.rs  transformer.rs  updater.rs  window.rs  work_collector.rs  work_controller.rs  worker.rs
src/actor/colorer/: color.rs  mod.rs
src/actor/screen_worker/: mod.rs
src/actor/window/: inputs.rs  mod.rs  rolling.rs  sampling.rs  widgetize.rs
src/assemblies/: mod.rs  structs.rs  views.rs
src/assemblies/headgroup/: mod.rs
src/assemblies/shadergroup/: escaper.rs  mod.rs
src/assemblies/structs/: mod.rs  (+1 more)
src/operation/: sampling.rs  settings.rs
talk/: outline.txt
talk/resources/: history.odt
(+25 files in other folders)
