[package]
name = "critical_zoomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#################################################################################################


[dependencies]
clap = "4.5.45"
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = "0.32.1"
env_logger = "0.11.8"
rand = "0.9.2"
rug = "1.27.0"
steady_state = "0.2.5"
winit = "0.30.12"
num_cpus = "1.17.0"



