[package]
name = "critical_zoomer"
version = "0.0.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#################################################################################################


[dependencies]
clap = "4.5.45"
eframe = "0.32.1"
egui = "0.32.1"
rug = "1.30.0"
steady_state = "0.2.9"
winit = "0.30.12"
egui_dnd = "0.13.0"
rand = "0.10.0"