[package]
name = "critical_zoomer"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#################################################################################################


[dependencies]
clap = "4.5.45"
eframe = "0.32.3"
egui = "0.32.3"
#egui_extras = "0.32.1"
#env_logger = "0.11.8"
rand = "0.9.2"
rug = "1.27.0"
steady_state = "0.2.13"
winit = "0.30.12"
#num_cpus = "1.17.0"
egui_dnd = "0.13.0"
num-traits = "0.2.19"
proptest = "1.11.0"
smallvec = "=1.15.2"

[dev-dependencies]
criterion = "0.8.2"
[[bench]]
name = "my_bench"
harness = false

[lib]
bench = false

[[bin]]
name = "critical_zoomer"
path = "src/main.rs"
bench = false
test = false